fix(checkbox): fix checkbox center alignment

--- a/src/styles/elements/_checkbox.scss
+++ b/src/styles/elements/_checkbox.scss
@@ -284,3 +284,16 @@ input[type='radio'] {
 .disabled.switch.field .content {
   opacity: $disabled-element-opacity;
 }
+
+
+/******
+    Fix Text Align
+******/
+.has-text-center > .checkbox.field,
+.has-text-center > .switch.field {
+  text-align: center;
+
+  > .wrapper > .content {
+    justify-content: center;
+  }
+}
